// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Create renders 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Create />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <div
          className="heading"
        >
          <ForwardRef>
            Create
          </ForwardRef>
          <P>
            Select a kite that you want to design
          </P>
        </div>,
        <Connect(ProductsContainer)>
          [Function]
        </Connect(ProductsContainer)>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <ForwardRef>
              Create
            </ForwardRef>,
            <P>
              Select a kite that you want to design
            </P>,
          ],
          "className": "heading",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": "Create",
            },
            "ref": null,
            "rendered": "Create",
            "type": Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": undefined,
              "componentStyle": ComponentStyle {
                "componentId": "sc-gzVnrw",
                "isStatic": true,
                "rules": Array [
                  "
  font-size: 2em;
",
                ],
              },
              "displayName": "Styled(H1)",
              "render": [Function],
              "styledComponentId": "sc-gzVnrw",
              "target": [Function],
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
              Symbol(Symbol.hasInstance): [Function],
            },
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": "Select a kite that you want to design",
            },
            "ref": null,
            "rendered": "Select a kite that you want to design",
            "type": [Function],
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": [Function],
        },
        "ref": null,
        "rendered": [Function],
        "type": [Function],
      },
    ],
    "type": Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": undefined,
      "componentStyle": ComponentStyle {
        "componentId": "sc-chPdSV",
        "isStatic": true,
        "rules": Array [
          "
  .products-wrapper {
    display: flex;
    margin: 8px 0 24px;
    justify-content: space-around;
  }
  .heading {
    padding: 8px 16px;
  }
",
        ],
      },
      "displayName": "styled.div",
      "render": [Function],
      "styledComponentId": "sc-chPdSV",
      "target": "div",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    },
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <div
            className="heading"
          >
            <ForwardRef>
              Create
            </ForwardRef>
            <P>
              Select a kite that you want to design
            </P>
          </div>,
          <Connect(ProductsContainer)>
            [Function]
          </Connect(ProductsContainer)>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <ForwardRef>
                Create
              </ForwardRef>,
              <P>
                Select a kite that you want to design
              </P>,
            ],
            "className": "heading",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": "Create",
              },
              "ref": null,
              "rendered": "Create",
              "type": Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": undefined,
                "componentStyle": ComponentStyle {
                  "componentId": "sc-gzVnrw",
                  "isStatic": true,
                  "rules": Array [
                    "
  font-size: 2em;
",
                  ],
                },
                "displayName": "Styled(H1)",
                "render": [Function],
                "styledComponentId": "sc-gzVnrw",
                "target": [Function],
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
                Symbol(Symbol.hasInstance): [Function],
              },
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": "Select a kite that you want to design",
              },
              "ref": null,
              "rendered": "Select a kite that you want to design",
              "type": [Function],
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": [Function],
          },
          "ref": null,
          "rendered": [Function],
          "type": [Function],
        },
      ],
      "type": Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": undefined,
        "componentStyle": ComponentStyle {
          "componentId": "sc-chPdSV",
          "isStatic": true,
          "rules": Array [
            "
  .products-wrapper {
    display: flex;
    margin: 8px 0 24px;
    justify-content: space-around;
  }
  .heading {
    padding: 8px 16px;
  }
",
          ],
        },
        "displayName": "styled.div",
        "render": [Function],
        "styledComponentId": "sc-chPdSV",
        "target": "div",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      },
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Create renders 2`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <div>
    <React.Fragment>
      <ManufacturerShowcase
        manufacturer={
          Object {
            "id": "abc",
            "logo": "abc.jpg",
            "name": "Krazy Kites",
            "website": "http://krazykites.com",
          }
        }
      >
        <div
          className="products-wrapper"
        >
          <ProductShowcase
            product={
              Object {
                "colors": Array [
                  Object {
                    "color": "#ff0000",
                    "name": "red",
                  },
                  Object {
                    "color": "#000000",
                    "name": "black",
                  },
                ],
                "id": "abc",
                "manufacturer": "abc",
                "name": "Krazy Kite",
                "url": "http://krazykites.com/krazy-kite",
                "variations": Array [
                  Object {
                    "name": "Standard",
                    "svg": "<div>Kool Kite</div>",
                  },
                ],
              }
            }
          />
        </div>
      </ManufacturerShowcase>
    </React.Fragment>
  </div>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <React.Fragment>
        <ManufacturerShowcase
          manufacturer={
            Object {
              "id": "abc",
              "logo": "abc.jpg",
              "name": "Krazy Kites",
              "website": "http://krazykites.com",
            }
          }
        >
          <div
            className="products-wrapper"
          >
            <ProductShowcase
              product={
                Object {
                  "colors": Array [
                    Object {
                      "color": "#ff0000",
                      "name": "red",
                    },
                    Object {
                      "color": "#000000",
                      "name": "black",
                    },
                  ],
                  "id": "abc",
                  "manufacturer": "abc",
                  "name": "Krazy Kite",
                  "url": "http://krazykites.com/krazy-kite",
                  "variations": Array [
                    Object {
                      "name": "Standard",
                      "svg": "<div>Kool Kite</div>",
                    },
                  ],
                }
              }
            />
          </div>
        </ManufacturerShowcase>
      </React.Fragment>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <ManufacturerShowcase
            manufacturer={
              Object {
                "id": "abc",
                "logo": "abc.jpg",
                "name": "Krazy Kites",
                "website": "http://krazykites.com",
              }
            }
          >
            <div
              className="products-wrapper"
            >
              <ProductShowcase
                product={
                  Object {
                    "colors": Array [
                      Object {
                        "color": "#ff0000",
                        "name": "red",
                      },
                      Object {
                        "color": "#000000",
                        "name": "black",
                      },
                    ],
                    "id": "abc",
                    "manufacturer": "abc",
                    "name": "Krazy Kite",
                    "url": "http://krazykites.com/krazy-kite",
                    "variations": Array [
                      Object {
                        "name": "Standard",
                        "svg": "<div>Kool Kite</div>",
                      },
                    ],
                  }
                }
              />
            </div>
          </ManufacturerShowcase>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": "abc",
          "nodeType": "function",
          "props": Object {
            "children": <div
              className="products-wrapper"
            >
              <ProductShowcase
                product={
                  Object {
                    "colors": Array [
                      Object {
                        "color": "#ff0000",
                        "name": "red",
                      },
                      Object {
                        "color": "#000000",
                        "name": "black",
                      },
                    ],
                    "id": "abc",
                    "manufacturer": "abc",
                    "name": "Krazy Kite",
                    "url": "http://krazykites.com/krazy-kite",
                    "variations": Array [
                      Object {
                        "name": "Standard",
                        "svg": "<div>Kool Kite</div>",
                      },
                    ],
                  }
                }
              />
            </div>,
            "manufacturer": Object {
              "id": "abc",
              "logo": "abc.jpg",
              "name": "Krazy Kites",
              "website": "http://krazykites.com",
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <ProductShowcase
                  product={
                    Object {
                      "colors": Array [
                        Object {
                          "color": "#ff0000",
                          "name": "red",
                        },
                        Object {
                          "color": "#000000",
                          "name": "black",
                        },
                      ],
                      "id": "abc",
                      "manufacturer": "abc",
                      "name": "Krazy Kite",
                      "url": "http://krazykites.com/krazy-kite",
                      "variations": Array [
                        Object {
                          "name": "Standard",
                          "svg": "<div>Kool Kite</div>",
                        },
                      ],
                    }
                  }
                />,
              ],
              "className": "products-wrapper",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": "abc",
                "nodeType": "function",
                "props": Object {
                  "product": Object {
                    "colors": Array [
                      Object {
                        "color": "#ff0000",
                        "name": "red",
                      },
                      Object {
                        "color": "#000000",
                        "name": "black",
                      },
                    ],
                    "id": "abc",
                    "manufacturer": "abc",
                    "name": "Krazy Kite",
                    "url": "http://krazykites.com/krazy-kite",
                    "variations": Array [
                      Object {
                        "name": "Standard",
                        "svg": "<div>Kool Kite</div>",
                      },
                    ],
                  },
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": "div",
          },
          "type": [Function],
        },
      ],
      "type": Symbol(react.fragment),
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <React.Fragment>
          <ManufacturerShowcase
            manufacturer={
              Object {
                "id": "abc",
                "logo": "abc.jpg",
                "name": "Krazy Kites",
                "website": "http://krazykites.com",
              }
            }
          >
            <div
              className="products-wrapper"
            >
              <ProductShowcase
                product={
                  Object {
                    "colors": Array [
                      Object {
                        "color": "#ff0000",
                        "name": "red",
                      },
                      Object {
                        "color": "#000000",
                        "name": "black",
                      },
                    ],
                    "id": "abc",
                    "manufacturer": "abc",
                    "name": "Krazy Kite",
                    "url": "http://krazykites.com/krazy-kite",
                    "variations": Array [
                      Object {
                        "name": "Standard",
                        "svg": "<div>Kool Kite</div>",
                      },
                    ],
                  }
                }
              />
            </div>
          </ManufacturerShowcase>
        </React.Fragment>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": Array [
            <ManufacturerShowcase
              manufacturer={
                Object {
                  "id": "abc",
                  "logo": "abc.jpg",
                  "name": "Krazy Kites",
                  "website": "http://krazykites.com",
                }
              }
            >
              <div
                className="products-wrapper"
              >
                <ProductShowcase
                  product={
                    Object {
                      "colors": Array [
                        Object {
                          "color": "#ff0000",
                          "name": "red",
                        },
                        Object {
                          "color": "#000000",
                          "name": "black",
                        },
                      ],
                      "id": "abc",
                      "manufacturer": "abc",
                      "name": "Krazy Kite",
                      "url": "http://krazykites.com/krazy-kite",
                      "variations": Array [
                        Object {
                          "name": "Standard",
                          "svg": "<div>Kool Kite</div>",
                        },
                      ],
                    }
                  }
                />
              </div>
            </ManufacturerShowcase>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "abc",
            "nodeType": "function",
            "props": Object {
              "children": <div
                className="products-wrapper"
              >
                <ProductShowcase
                  product={
                    Object {
                      "colors": Array [
                        Object {
                          "color": "#ff0000",
                          "name": "red",
                        },
                        Object {
                          "color": "#000000",
                          "name": "black",
                        },
                      ],
                      "id": "abc",
                      "manufacturer": "abc",
                      "name": "Krazy Kite",
                      "url": "http://krazykites.com/krazy-kite",
                      "variations": Array [
                        Object {
                          "name": "Standard",
                          "svg": "<div>Kool Kite</div>",
                        },
                      ],
                    }
                  }
                />
              </div>,
              "manufacturer": Object {
                "id": "abc",
                "logo": "abc.jpg",
                "name": "Krazy Kites",
                "website": "http://krazykites.com",
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <ProductShowcase
                    product={
                      Object {
                        "colors": Array [
                          Object {
                            "color": "#ff0000",
                            "name": "red",
                          },
                          Object {
                            "color": "#000000",
                            "name": "black",
                          },
                        ],
                        "id": "abc",
                        "manufacturer": "abc",
                        "name": "Krazy Kite",
                        "url": "http://krazykites.com/krazy-kite",
                        "variations": Array [
                          Object {
                            "name": "Standard",
                            "svg": "<div>Kool Kite</div>",
                          },
                        ],
                      }
                    }
                  />,
                ],
                "className": "products-wrapper",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": "abc",
                  "nodeType": "function",
                  "props": Object {
                    "product": Object {
                      "colors": Array [
                        Object {
                          "color": "#ff0000",
                          "name": "red",
                        },
                        Object {
                          "color": "#000000",
                          "name": "black",
                        },
                      ],
                      "id": "abc",
                      "manufacturer": "abc",
                      "name": "Krazy Kite",
                      "url": "http://krazykites.com/krazy-kite",
                      "variations": Array [
                        Object {
                          "name": "Standard",
                          "svg": "<div>Kool Kite</div>",
                        },
                      ],
                    },
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
              ],
              "type": "div",
            },
            "type": [Function],
          },
        ],
        "type": Symbol(react.fragment),
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
